[tool.poetry]
name = "sado-analytics-services"
version = "0.1.0"
description = ""
authors = ["Chien Le <lchien063@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.8.9"
dbt-bigquery = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
